--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>SonaSons</title>
+  <!-- <title>SonaSons</title> -->
 </head>
 
 <body>
